<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/order_textview"
        android:layout_width="236dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:text="@string/order_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="74dp"
        android:layout_height="30dp"
        android:text="@string/text_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_textview"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="234dp"
        android:layout_height="51dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:text="@string/edit_text_name"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toEndOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/order_textview"
        app:layout_constraintVertical_bias="0.043"
        tools:ignore="LabelFor" />


    <TextView
        android:id="@+id/text_address"
        android:layout_width="73dp"
        android:layout_height="34dp"
        android:layout_marginStart="12dp"
        android:hint="@string/hint_address"
        android:text="@string/text_address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        app:layout_constraintVertical_bias="0.049" />

    <EditText
        android:id="@+id/edit_text_address"
        android:layout_width="240dp"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_address"
        android:inputType="textMultiLine"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toEndOf="@+id/text_address"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="78dp"
        android:layout_height="28dp"

        android:text="@string/text_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_address"
        app:layout_constraintVertical_bias="0.165" />

    <EditText
        android:id="@+id/editText_Phone"
        android:layout_width="114dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/text_phone"
        app:layout_constraintStart_toEndOf="@+id/text_phone" />

    <TextView
        android:id="@+id/text_note"
        android:layout_width="40dp"
        android:layout_height="24dp"
        android:text="@string/text_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_phone"
        app:layout_constraintVertical_bias="0.193" />

    <EditText
        android:id="@+id/editText_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_note"
        android:inputType="textMultiLine|textCapSentences"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toEndOf="@+id/text_note"
        app:layout_constraintTop_toBottomOf="@+id/editText_Phone"
        app:layout_constraintVertical_bias="0.214" />

    <TextView
        android:id="@+id/text_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/text_delivery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_note" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_delivery"
        app:layout_constraintVertical_bias="0.387">

        <RadioButton
            android:id="@+id/radio_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radio_pickup" />

        <RadioButton
            android:id="@+id/radio_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radio_delivery"/>

    </RadioGroup>

    <Spinner
        android:id="@+id/label_spinner"
        android:layout_width="116dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/editText_Phone"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_address"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>